--- a/videos.html
+++ b/videos.html
@@ -57,6 +57,11 @@
         <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/yiEeiMN2Khs?rel=0" frameborder="0"
           allow="autoplay; encrypted-media" allowfullscreen></iframe>
         <br>
+	<br>
+        <h5 class="header col s12 light">Great explanation of closures in JavaScript.</h5>
+        <iframe width="300" height="600" src="https://www.youtube-nocookie.com/embed/yiEeiMN2Khs?rel=1" frameborder="0"
+          allow="autoplay; encrypted-media" allowfullscreen></iframe>
+        <br>
         <h5 class="header col s12 light">Hash Tables and Hash Functions</h5>
         <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/KyUTuwz_b7Q?rel=0" frameborder="0"
           allow="autoplay; encrypted-media" allowfullscreen></iframe>
